# yolo11-

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults.esp32p4  sdkconfig.old
components/espressif__esp_ipa/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
esp-iot-solution/: .pre-commit-config.yaml
esp-iot-solution/components/bluetooth/ble_profiles/esp/ble_ota/: CHANGELOG.md  idf_component.yml
esp-iot-solution/components/bluetooth/ble_services/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
esp-iot-solution/components/bluetooth/ble_services/ias/: Kconfig.in
esp-iot-solution/components/bluetooth/ble_services/ias/include/: esp_ias.h
esp-iot-solution/components/bluetooth/ble_services/ias/src/: esp_ias.c
esp-iot-solution/components/display/lcd/esp_lcd_ek79007/: idf_component.yml
esp-iot-solution/components/display/lcd/esp_lcd_er88577/: idf_component.yml
esp-iot-solution/components/display/lcd/esp_lcd_gc9b71/: idf_component.yml
esp-iot-solution/components/display/lcd/esp_lcd_panel_io_additions/: idf_component.yml
esp-iot-solution/components/display/lcd/esp_lcd_sh8601/: idf_component.yml
esp-iot-solution/components/display/lcd/esp_lcd_spd2010/: idf_component.yml
esp-iot-solution/components/display/lcd/esp_lcd_st77903_qspi/: idf_component.yml
esp-iot-solution/components/display/tools/esp_lv_eaf_player/: idf_component.yml
esp-iot-solution/components/display/tools/esp_lv_lottie_player/: idf_component.yml
esp-iot-solution/components/mcp-c-sdk/: README.md  README_CN.md
esp-iot-solution/components/quickjs-ng/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
esp-iot-solution/components/quickjs-ng/port/: stub.c
esp-iot-solution/components/quickjs-ng/port/include/: esp_libc_compat.h  poll.h
esp-iot-solution/components/quickjs-ng/quickjs-ng/: LICENSE  builtin-array-fromasync.h  builtin-iterator-zip-keyed.h  builtin-iterator-zip.h  cutils.h  dtoa.c  libregexp.c  libunicode-table.h  libunicode.c  libunicode.h  quickjs-c-atomics.h  quickjs-libc.c  quickjs-libc.h  quickjs-opcode.h  quickjs.c  quickjs.h
esp-iot-solution/components/sensors/gas/bme690/: README.md  idf_component.yml
esp-iot-solution/docs/en/bluetooth/: ble_ias.rst  ble_services.rst
esp-iot-solution/docs/zh_CN/bluetooth/: ble_ias.rst  ble_services.rst
esp-iot-solution/examples/bluetooth/ble_ota/main/: idf_component.yml
esp-iot-solution/examples/camera/video_lcd_display/: partitions.csv
esp-iot-solution/examples/camera/video_lcd_display/main/: CMakeLists.txt  idf_component.yml  main.cpp
esp-iot-solution/examples/display/gui/common/hw_init/: Kconfig.projbuild
esp-iot-solution/examples/display/gui/lvgl_decode_image/: sdkconfig.defaults.esp32s31
esp-iot-solution/examples/display/gui/lvgl_eaf_player/main/: idf_component.yml
esp-iot-solution/examples/display/lcd/lcd_layer_blending/: README.md
esp-iot-solution/examples/display/lcd/mipi_dsi_avoid_tearing/: README.md
esp-iot-solution/examples/display/lcd/qspi_with_ram/: README.md
esp-iot-solution/examples/display/lcd/qspi_without_ram/: README.md
esp-iot-solution/examples/display/lcd/rgb_avoid_tearing/: README.md
esp-iot-solution/examples/display/lcd/rgb_lcd_8bit/: README.md
esp-iot-solution/examples/quickjs-ng/: CMakeLists.txt  README.md  sdkconfig.defaults
esp-iot-solution/examples/quickjs-ng/main/: CMakeLists.txt  hello_world.js  idf_component.yml  qjs_main.c
esp-iot-solution/examples/usb/device/usb_dongle/: README.md  README_EN.md
esp-iot-solution/examples/usb/device/usb_lcd_display/: README.md
esp-iot-solution/examples/usb/device/usb_msc_wireless_disk/: sdkconfig.defaults
esp-iot-solution/examples/usb/host/usb_hub_dual_camera/frontend_source/: package.json
esp-iot-solution/examples/usb/host/usb_hub_dual_camera/main/: Kconfig.projbuild  app_wifi.c
esp-iot-solution/tools/ci/: check_copyright_config.yaml  check_readme_links.py
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
(+8 files in other folders)
